--- a/templates/base/css.html
+++ b/templates/base/css.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="static/css/imports/bootstrap.css">
 <link rel="stylesheet" href="static/css/style.css">
 <link rel="stylesheet" href="static/css/chat.css">
-
+<link rel="stylesheet" href="static/css/navbar.css">
+<link rel="stylesheet" href="static/css/home.css">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    
