--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,14 +7,28 @@
 {% include 'base/css.html' %}
 </head>
 <body>
+    <div class="area" >
+        <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+        </ul>
+</div >
+<div class="context">
     <div id="app">
-        <div class="col-mn-12" style="background-color: aqua; height: 30px;">
-                
-                    <!-- Online<% onLine %> -->
-        </div>
-{% include 'home.html' %}
-{% include 'chat.html' %}
+        {% include 'base/navbar.html' %}
+        {% include 'home.html' %}
+        {% include 'chat.html' %}
+        <!-- <footer class="text-center" style="color: rgb(149, 149, 149);position: sticky;bottom: 10px;" >Enjoy chatting</footer> -->
     </div>
+</div>
 </body>
 {% include 'base/js.html' %}
 </html>
