--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
                         <br>
                         Click on Start Chat button to start chatting 😊
                     </p>
-                    <button class="startbtn" @click="changepage('Chat')" style="margin: 30px;">Start chat</button>
+                    <button class="startbtn" @click="changePage('Chat')" style="margin: 30px;">Start chat</button>
                 </div>
             </div>    
         </div>
