--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,8 +20,7 @@ body{
     width: 100%;
     height: 100vh;
     position: absolute;
-    top:0vh;
-    
+    top:0px;
 }
 
 .context h1{
@@ -36,7 +35,7 @@ body{
     background: #000000;  
     background: -webkit-linear-gradient(to left, #858bfd, #4449b9);  
     width: 100vw;
-    height:100vh;
+    height:101vh;
 }
 
 .circles{
