--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,20 +1,22 @@
         <div v-if="currentpage == 'Chat'">
             <div class="panelstyling">
-                
-                <div class="addleft"></div>
+                <!-- Advertisement Left-->
+                <div class="add"></div>
                 
                 <div class="chatbob">
                     <div class="panelheading text-center">
-                        Heading...
+                        <div style="color: white;">
+                            <%status%>
+                        </div>
                     </div>
-                    <div class="panelbody" style="overflow-y: scroll; overflow-x: hidden;">
-                        <div v-for="(message, index) in chat_messages">
-                            <!-- <div v-if="message.to == partner"> -->
-                                <br>
-                                <div style="height: 13.9%; margin-top: 5px;">
+
+                    <div id="panelbody" style="overflow-y: scroll; overflow-x: hidden;">
+                        <div v-for="(message, index) in chat_messages" @load="scrollToBottom">
+                                <div style="margin-top: 5px; overflow:auto; height: auto; min-height: 20px;">
                                     <div style="">
-                                        <div v-if="message.to == partner">
+                                        <div v-if="message.from == 'self'">
                                             <div class="message" style="display: inline; float: right;">
+                                                <div style="color: rgb(42, 106, 165);">You: </div>
                                                 <%message.message%>
                                                 <br>
                                                 <div style="float: left; font-size: 12px;">
@@ -23,7 +25,8 @@
                                             </div>
                                         </div>
                                         <div v-else>
-                                            <div class="message" style="display: inline; float: left;">
+                                            <div class="message" style="display: inline; float: left; margin-left: 5px;">
+                                                <div style="color: brown;">Stranger: </div>
                                                 <%message.message%>
                                                 <br>
                                                 <div style="float: right; font-size: 12px;">
@@ -33,36 +36,21 @@
                                         </div>
                                     </div>
                                 </div>
-                                <br>
-                                <br>
                         </div>
-                            <!-- </div> -->
-                            <!-- <div v-else>
-                                <br>
-                                <div style="height: 13.9%; margin-top: 5px;">
-                                    <div style="">
-                                        <div class="message" style="display: inline; float: left;">
-                                            <%message.message%>
-                                            <br>
-                                            <div style="float: right; font-size: 12px;">
-                                                <%(new Date).getHours()%>:<% (new Date).getMinutes() %>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <br>
-                                <br>
-                            </div> -->
-                        <!-- </div> -->
                     </div>
-                    <div class="panelfooter text-center" style="background-color:inherit; margin-top: 10px;">
-                        <div class="inputbox">
-                            <button class="inputbutton">New</button>
-                            <input class="input" autofocus type="text" name="" id="" v-model="message">
-                            <button class="inputbutton" style="height: 100%;" @click="sendmsg"><span class="glyphicon glyphicon-send"></span></button>
+
+                    <div class="panel-footer text-center" style="margin-top: 10px; background-color: inherit; border: none;">
+                        <div class="inputbox" @keyup="inputBoxEvents(event);">
+                            <button class="inputbutton" id="new">
+                                Stop
+                            </button>
+                            <input class="input" autofocus type="text" name="" :disabled="partner? false : true" id="msgbox" v-model="message">
+                            <button class="inputbutton" style="display: flex;" :disabled="partner? false : true" @click="sendmsg"> <div>Send</div>&nbsp;<div class="glyphicon glyphicon-send"></div></button>
                         </div>
                     </div>
                 </div>
-                <!-- <div class="addright" style="background-color: brown;">Right asdfads</div> -->
+
+                <!-- Advertisement Right-->
+                <div class="add"></div>
             </div>
         </div>
