--- a/templates/base/css.html
+++ b/templates/base/css.html
@@ -1,8 +1,7 @@
-<link rel="stylesheet" href="static/css/imports/bootstrap.css">
+<!-- <link rel="stylesheet" href="static/css/imports/bootstrap.css"> -->
 <link rel="stylesheet" href="static/css/style.css">
 <link rel="stylesheet" href="static/css/chat.css">
 <link rel="stylesheet" href="static/css/navbar.css">
 <link rel="stylesheet" href="static/css/home.css">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    
