--- a/templates/chat.html
+++ b/templates/chat.html
@@ -38,10 +38,12 @@
                                 </div>
                         </div>
                     </div>
-
+                    <div style="height:5px; padding-left: 20px; font-size: 12px; color: white;">
+                        <% typing %>
+                    </div>
                     <div class="panel-footer text-center" style="margin-top: 10px; background-color: inherit; border: none;">
                         <div class="inputbox" @keyup="inputBoxEvents(event);">
-                            <button class="inputbutton" id="new" title="ESC" @click="changeUserStatus">
+                            <button class="inputbutton" title="ESC" @click="changeUserStatus">
                                 <% new_user %>
                             </button>
                             <input class="input" autofocus type="text" name="" :disabled="partner? false : true" id="msgbox" v-model="message">
