--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,8 +24,8 @@
 <div class="context">
     <div id="app">
         {% include 'base/navbar.html' %}
-        {% include 'home.html' %}
-        {% include 'chat.html' %}
+        {% include 'dashboard/home.html' %}
+        {% include 'dashboard/chat.html' %}
         <!-- <footer class="text-center" style="color: rgb(149, 149, 149);position: sticky;bottom: 10px;" >Enjoy chatting</footer> -->
     </div>
 </div>
