--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,8 @@
     margin: 0px;
     padding: 0px;
     font-family: 'Exo', sans-serif;
+    font-size: 18px;
+    font-weight: 12px;
 }
 
 body{
@@ -34,7 +36,7 @@ body{
 
 
 .area{
-    background: #000000;  
+    background: #101d24;  
     background: -webkit-linear-gradient(to left, #858bfd, #4449b9);  
     width: 100vw;
     height:101vh;
@@ -135,6 +137,53 @@ body{
     height: 150px;
     animation-delay: 0s;
     animation-duration: 11s;
+}
+
+
+
+.circles li:nth-child(11){
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+.circles li:nth-child(12){
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+
+.circles li:nth-child(13){
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+
+.circles li:nth-child(14){
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
+
+.circles li:nth-child(15){
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+
+.circles li:nth-child(16){
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
 }
 
 
