--- a/templates/dashboard/chat.html
+++ b/templates/dashboard/chat.html
@@ -13,24 +13,23 @@
                     <div id="panelbody" style="overflow-y: scroll; overflow-x: hidden;">
                         <div v-for="(message, index) in chat_messages" @load="scrollToBottom">
                                 <div style="margin-top: 5px; overflow:auto; height: auto; min-height: 20px;">
-                                    <div style="">
+                                    <div>
                                         <div v-if="message.from == 'self'">
-                                            <div class="message" style="display: inline; float: right;">
-                                                <div style="color: rgb(42, 106, 165);">You: </div>
+                                            <div class="message send">
+                                                
                                                 <%message.message%>
                                                 <br>
-                                                <div style="float: left; font-size: 12px;">
-                                                    <%(new Date).getHours()%>:<% (new Date).getMinutes() %>
+                                                <div style="float: right; font-size: 18px;">
+                                                    <sup>&nbsp;&nbsp;&nbsp;<%(new Date).getHours()%>:<% (new Date).getMinutes() %></sup>
                                                 </div>
                                             </div>
                                         </div>
                                         <div v-else>
-                                            <div class="message" style="display: inline; float: left; margin-left: 5px;">
-                                                <div style="color: brown;">Stranger: </div>
+                                            <div class="message received">
                                                 <%message.message%>
                                                 <br>
-                                                <div style="float: right; font-size: 12px;">
-                                                    <%(new Date).getHours()%>:<% (new Date).getMinutes() %>
+                                                <div style="float: right; font-size: 18px;">
+                                                    <sup>&nbsp;&nbsp;&nbsp;<%(new Date).getHours()%>:<% (new Date).getMinutes() %></sup>
                                                 </div>
                                             </div>
                                         </div>
@@ -43,12 +42,13 @@
                     </div>
                     <div class="panel-footer text-center" style="margin-top: 10px; background-color: inherit; border: none;">
                         <div class="inputbox" @keyup="inputBoxEvents(event);">
-                            <button class="inputbutton" title="ESC" @click="changeUserStatus">
+                            <div class="inputbutton" title="ESC" @click="changeUserStatus">
                                 <% new_user %>
-                            </button>
+                            </div>
                             <input class="input" autofocus type="text" name="" :disabled="partner? false : true" id="msgbox" v-model="message">
-                            <button class="inputbutton" style="display: flex;" :disabled="partner? false : true" @click="sendmsg"> <div>Send</div>&nbsp;<div class="glyphicon glyphicon-send"></div></button>
+                            <div class="inputbutton" style="display: flex;" :disabled="partner? false : true" @click="sendmsg"><span class="glyphicon glyphicon-send"></span></div>
                         </div>
+                        
                     </div>
                 </div>
 
