--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -42,6 +42,7 @@
     box-shadow: 1px 1px 3px black;
 }
 #panelbody{
+    scrollbar-width: 0px;
     height: 80%;
 }
 
@@ -52,6 +53,7 @@
     max-width: 80%;
     margin-right: 50px;
     border-radius: 10px;
+    word-wrap: break-word;
     /* box-shadow:	0 5px 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2); */
 }
 
