--- a/templates/dashboard/chat.html
+++ b/templates/dashboard/chat.html
@@ -1,7 +1,7 @@
         <div v-if="currentpage == 'Chat'">
             <div class="panelstyling">
                 <!-- Advertisement Left-->
-                <div class="add"></div>
+                <div class="add left"></div>
                 
                 <div class="chatbob">
                     <div class="panelheading text-center">
@@ -18,7 +18,7 @@
                                             <div class="message send">
                                                 <%message.message%>
                                                 <br>
-                                                <div style="float: right; font-size: 18px;">
+                                                <div id="time">
                                                     <sup>&nbsp;&nbsp;&nbsp;<%(new Date).getHours()%>:<% (new Date).getMinutes() %></sup>
                                                 </div>
                                             </div>
@@ -27,7 +27,7 @@
                                             <div class="message received">
                                                 <%message.message%>
                                                 <br>
-                                                <div style="float: right; font-size: 18px;">
+                                                <div id="time">
                                                     <sup>&nbsp;&nbsp;&nbsp;<%(new Date).getHours()%>:<% (new Date).getMinutes() %></sup>
                                                 </div>
                                             </div>
@@ -39,7 +39,7 @@
                     <div style="height:5px; padding-left: 20px; font-size: 12px; color: white;">
                         <% typing %>
                     </div>
-                    <div class="panel-footer text-center" style="margin-top: 10px; background-color: inherit; border: none;">
+                    <div class="panel-footer text-center" style="margin-top: 10px; margin-bottom: 20px; background-color: inherit; border: none;">
                         <div class="inputbox" @keyup="inputBoxEvents(event);">
                             <div class="inputbutton" title="ESC" @click="changeUserStatus">
                                 <% new_user %>
@@ -52,6 +52,6 @@
                 </div>
 
                 <!-- Advertisement Right-->
-                <div class="add"></div>
+                <!-- <div class="add right"></div> -->
             </div>
         </div>
