--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -1,13 +1,13 @@
         <div v-if="currentpage == 'Home' " class="home">
             <div class="text-center">
                 <div class="homePanel text-center">
-                    <p style="padding-left: 10%; padding-right: 10%; padding-top: 40px;">Welcome to TTS (Talk To Stranger)!
+                    <div class="para">Welcome to TTS (Talk To Stranger)!
                         The site where you can talk to strangers. When you use TTS, we pick someone else at random and let you talk one-on-one.
                         These chats are not saved and you can leave the chat room whenever you want.<br>
                         <br>
                         Click on Start Chat button to start chatting 😊
-                    </p>
-                    <button class="startbtn" @click="changePage('Chat')" style="margin: 30px;">Start chat</button>
+                    </div>
+                    <button class="startbtn" @click="changePage('Chat')">Start chat</button>
                 </div>
             </div>    
         </div>
