--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -18,9 +18,8 @@
     box-shadow:	0px 0px 5px #75838a ;
 }
 
-.panelheading{
-    font-size: 20px;
-}
+.panelheading{}
+
 .input{
     border: none;
     border-bottom: 1px solid rgb(167, 165, 165);
@@ -42,8 +41,11 @@
     box-shadow: 1px 1px 3px black;
 }
 #panelbody{
-    scrollbar-width: 0px;
     height: 80%;
+    overflow-y: auto; 
+    overflow-x: hidden; 
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
 }
 
   /* Message bubble */
@@ -58,16 +60,6 @@
     margin-right: 50px;
     border-radius: 10px;
     word-wrap: break-word;
-    /* box-shadow:	0 5px 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2); */
-}
-
-
-.panelstyling{
-    display: flex;
-    background-color: inherit;
-    height: 90vh;
-    overflow:auto;
-    min-height: 20px;
 }
 .send{
     background-color: #054740;
@@ -84,42 +76,78 @@
     margin-left: 5px;
 }
 
+.panelstyling{
+    padding: 2%;
+    width: 100%;
+    display: flex;
+    height: 93.2vh;
+}
+
+
 .add{
+    position: relative;
     width: 20%;
-    margin: 3%;
+    margin: 2%;
+    margin-right: 1%;
 }
-
+.left{
+    display: block;
+}
 .chatbob{
-    width: 50%;
-    height: 100%;
+    width: 53%;
+    margin: 2%;
+    margin-right: 1%;
 }
-
-@media( max-width: 800px) {
+.inputboxContainer{
+    width: 50%;
+}
+@media( max-width: 750px) {
+    
+    /* panels */
+    #panelbody{
+        height: 80%;
+        margin-bottom: 10%;
+    }
     .panelstyling{
+        padding: 0px;
         display: block;
-        height: 93.2vh;
+        width: 100%;
+        height: 100vh;
+    }
+    .left{
+        display: none;
+    }
+    .right{
+        display: none;
+    }
+    .chatbob{
+        width: auto;
+        margin: 0px;
+        display: block;
+        height: 67vh;
     }
     .panelheading{
-        font-size: 15px;
+        font-size: 13px;
     }
 
+    /* Adds */
+    .add{
+        width: 100%;
+        height: 10%;
+        margin: 0px;
+    }
+
+
+    /* Message */
     .message{
         font-size: 14px;
     }
     #time{
         font-size: 10px;
     }
-    .add{
-        width: auto;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        height: 10%;
-    }
 
-    .chatbob{
+    .inputboxContainer{
         width: 100%;
-        height: 74%;
-        margin-left: 0%;
     }
     .inputsend{
         width: 100%;
