--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -2,7 +2,6 @@
     overflow: hidden;
     background-color: rgba(230, 224, 224, 0);
   }
-  
   .topnav a {
     float: left;
     display: block;
@@ -20,7 +19,7 @@
   .button{
     text-decoration: none;
     border-radius: 10px;
-    margin: 5px;
+    margin-left: 5px;
     float: right; 
     margin-right: 5vw; 
     margin-top: 10px;
@@ -32,7 +31,6 @@
     font-size: 15px;
     font-weight: bolder;
     font-style: italic;
-    /* background-color: rgb(58, 58, 58); */
   }
   .button:hover{
     color: white;
@@ -45,25 +43,32 @@
   .topnav .icon {
     display: none;
   }
-  
-  @media screen and (max-width: 600px) {
-    /* .topnav a:not(:first-child) {display: none;} */
-    /* .topnav a.icon {
-      float: right;
-      display: block;
-    } */
+
+
+  .logo{
+    text-decoration: none;
+    border-radius: 10px;
+    margin-left: 5px;
+    float: left; 
+    margin-right: 5vw; 
+    margin-top: 10px;
+    text-decoration: none;
+    display: block;
+    color: rgb(149, 149, 149);
+    text-align: center;
+    padding: 14px 16px;
+    font-size: 15px;
+    font-weight: bolder;
+    font-style: italic;
   }
   
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    /* .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    } */
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
+@media (max-width: 800px) {
+  .topnav a {
+    font-size: 14px;
+    height: 5%;
   }
+
+  .button{
+    font-size: 14px;
+  }
+}
