--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,3 @@
-/* body{ */
-    /* background-image: linear-gradient(120deg, #bbd2f8 0%, #c2e9fb 100%); */
-    /* background-image: url('/static/assets/background.jpg'); */
-    /* background-image: url('/static/assets/doodle.png') ; */
-/* } */
 @import url('https://fonts.googleapis.com/css?family=Exo:400,700');
 *{
     margin: 0px;
@@ -12,14 +7,21 @@
     font-weight: 12px;
 }
 
-body{
-    overflow: hidden;
+html{
+    height: 100%;
+    position:fixed;
 }
 
+#app{
+    width: 100%;
+    height: 100vh;
+    background-color: #0f1585b9;
+    overflow: scroll;
+}
 
 .context {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: absolute;
     top:0px;
 }
@@ -39,7 +41,7 @@ body{
     background: #101d24;  
     background: -webkit-linear-gradient(to left, #858bfd, #4449b9);  
     width: 100vw;
-    height:101vh;
+    height:100%;
 }
 
 .circles{
@@ -202,4 +204,129 @@ body{
         border-radius: 50%;
     }
 
+}
+
+@media screen and (max-width: 750px) {
+    .circles li:nth-child(1){
+        left: 25%;
+        width: 80px;
+        height: 80px;
+        animation-delay: 0s;
+    }
+    
+    
+    .circles li:nth-child(2){
+        left: 10%;
+        width: 20px;
+        height: 20px;
+        animation-delay: 2s;
+        animation-duration: 12s;
+    }
+    
+    .circles li:nth-child(3){
+        left: 70%;
+        width: 20px;
+        height: 20px;
+        animation-delay: 4s;
+    }
+    
+    .circles li:nth-child(4){
+        left: 40%;
+        width: 60px;
+        height: 60px;
+        animation-delay: 0s;
+        animation-duration: 18s;
+    }
+    
+    .circles li:nth-child(5){
+        left: 65%;
+        width: 20px;
+        height: 20px;
+        animation-delay: 0s;
+    }
+    
+    .circles li:nth-child(6){
+        left: 75%;
+        width: 70px;
+        height: 70px;
+        animation-delay: 3s;
+    }
+    
+    .circles li:nth-child(7){
+        left: 35%;
+        width: 90px;
+        height: 90px;
+        animation-delay: 7s;
+    }
+    
+    .circles li:nth-child(8){
+        left: 50%;
+        width: 25px;
+        height: 25px;
+        animation-delay: 15s;
+        animation-duration: 45s;
+    }
+    
+    .circles li:nth-child(9){
+        left: 20%;
+        width: 15px;
+        height: 15px;
+        animation-delay: 2s;
+        animation-duration: 35s;
+    }
+    
+    .circles li:nth-child(10){
+        left: 85%;
+        width: 90px;
+        height: 90px;
+        animation-delay: 0s;
+        animation-duration: 11s;
+    }
+    
+    
+    
+    .circles li:nth-child(11){
+        left: 40%;
+        width: 60px;
+        height: 60px;
+        animation-delay: 0s;
+        animation-duration: 18s;
+    }
+    
+    .circles li:nth-child(12){
+        left: 65%;
+        width: 20px;
+        height: 20px;
+        animation-delay: 0s;
+    }
+    
+    .circles li:nth-child(13){
+        left: 75%;
+        width: 70px;
+        height: 70px;
+        animation-delay: 3s;
+    }
+    
+    .circles li:nth-child(14){
+        left: 35%;
+        width: 90px;
+        height: 90px;
+        animation-delay: 7s;
+    }
+    
+    .circles li:nth-child(15){
+        left: 50%;
+        width: 25px;
+        height: 25px;
+        animation-delay: 15s;
+        animation-duration: 45s;
+    }
+    
+    .circles li:nth-child(16){
+        left: 20%;
+        width: 15px;
+        height: 15px;
+        animation-delay: 2s;
+        animation-duration: 35s;
+    }
 }
