--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,8 +1,6 @@
 <div class="topnav" id="myTopnav">
-    <a href="#home">TTS LOGO</a>
-    <img src="" alt="" srcset="">
+    <div class="logo">TTS LOGO
+      <img src="" alt="" srcset="">
+    </div>
     <p class="button">Online: <% onLine %></p>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
   </div>
