--- a/templates/dashboard/chat.html
+++ b/templates/dashboard/chat.html
@@ -5,12 +5,11 @@
                 
                 <div class="chatbob">
                     <div class="panelheading text-center">
-                        <div style="color: white;">
+                        <div style="color: white; height: 5%; font-size: 12px;">
                             <%status%>
                         </div>
                     </div>
-
-                    <div id="panelbody" style="overflow-y: auto; overflow-x: hidden; -ms-overflow-style: none; scrollbar-width: none;">
+                    <div id="panelbody">
                         <div v-for="(message, index) in chat_messages" @load="scrollToBottom">
                                 <div style="margin-top: 5px; overflow:auto; height: auto; min-height: 20px;">
                                     <div>
@@ -36,10 +35,12 @@
                                 </div>
                         </div>
                     </div>
-                    <div style="height:5px; padding-left: 20px; font-size: 12px; color: white;">
-                        <% typing %>
-                    </div>
-                    <div class="panel-footer text-center" style="margin-top: 10px; margin-bottom: 20px; background-color: inherit; border: none;">
+                    
+                    <div class="inputboxContainer text-center" style="position: absolute; bottom: 0%; margin-bottom: 20px; border: none;">
+                        <div style="height:5px; padding-left: 20px; float: left; font-size: 12px; bottom:3%; color: white;">
+                            <% typing %>
+                        </div>
+                        <br>
                         <div class="inputbox" @keyup="inputBoxEvents(event);">
                             <div class="inputbutton" title="ESC" @click="changeUserStatus">
                                 <% new_user %>
@@ -52,6 +53,6 @@
                 </div>
 
                 <!-- Advertisement Right-->
-                <!-- <div class="add right"></div> -->
+                <div class="add right"></div>
             </div>
         </div>
