Report stranger ui part

--- a/templates/base/css.html
+++ b/templates/base/css.html
@@ -1,5 +1,5 @@
-<!-- <link rel="stylesheet" href="static/css/imports/bootstrap.css"> -->
 <link rel="stylesheet" href="static/css/style.css">
+<link rel="stylesheet" href="static/css/modal/yesNoModal.css">
 <link rel="stylesheet" href="static/css/navbar.css">
 <link rel="stylesheet" href="static/css/chat.css">
 <link rel="stylesheet" href="static/css/home.css">
