--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -1,170 +1,4 @@
-.inputbutton{
-    border: none;
-    width: auto;
-    margin: 3px;
-    color: #d6d8da;
-    background: none;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    text-decoration: none;
-}
-.inputbutton:hover{
-    border-radius: 20px;
-    background-color: #232b2f;
-}
-.inputbutton:active{
-    box-shadow:	0px 0px 5px #75838a ;
-}
-
-.panelheading{}
-
-.input{
-    border: none;
-    border-bottom: 1px solid rgb(167, 165, 165);
-    background: none;
-    outline: none;
-    flex-grow: 1;
-    min-width: 50px;
-    margin-left: 10px;
-    margin-right: 10px;
-    text-align: center;
-    padding-bottom: 0px;
-}  
-.inputbox{
-    border-radius: 40px;
-    padding: 5px;
-    color: #d6d8da;
-    background-color: #2d383e;
-    display: flex;
-    box-shadow: 1px 1px 3px black;
-}
-#panelbody{
-    height: 80%;
-    overflow-y: auto; 
-    overflow-x: hidden; 
-    -ms-overflow-style: none; 
-    scrollbar-width: none;
-}
-
-  /* Message bubble */
-#time{
-    float: right; 
-    font-size: 18px;
-}
-.message{
-    text-align: left;
-    padding: 10px;
-    max-width: 80%;
-    margin-right: 50px;
-    border-radius: 10px;
-    word-wrap: break-word;
-}
-.send{
-    background-color: #054740;
-    display: inline; 
-    float: right;
-    margin-right: 5px;
-    color: #d6d8da;
-}
-.received{
-    background-color: #222e35;
-    display: inline;
-    float: left; 
-    color: #d6d8da;
-    margin-left: 5px;
-}
-
-.panelstyling{
-    padding: 2%;
-    width: 100%;
-    display: flex;
-    height: 93.2vh;
-}
-
-
-.add{
-    position: relative;
-    width: 20%;
-    margin: 2%;
-    margin-right: 1%;
-}
-.left{
-    display: block;
-}
-.chatbob{
-    width: 53%;
-    margin: 2%;
-    margin-right: 1%;
-}
-.inputboxContainer{
-    width: 50%;
-}
-@media( max-width: 750px) {
-    
-    /* panels */
-    #panelbody{
-        height: 80%;
-        margin-bottom: 10%;
-    }
-    .panelstyling{
-        padding: 0px;
-        display: block;
-        width: 100%;
-        height: 100vh;
-    }
-    .left{
-        display: none;
-    }
-    .right{
-        display: none;
-    }
-    .chatbob{
-        width: auto;
-        margin: 0px;
-        display: block;
-        height: 67vh;
-    }
-    .panelheading{
-        font-size: 13px;
-    }
-
-    /* Adds */
-    .add{
-        width: 100%;
-        height: 10%;
-        margin: 0px;
-    }
-
-
-    /* Message */
-    .message{
-        font-size: 14px;
-    }
-    #time{
-        font-size: 10px;
-    }
-
-    .inputboxContainer{
-        width: 100%;
-    }
-    .inputsend{
-        width: 100%;
-    }
-    .imputbutton{
-        width: 10%;
-    }
-    .input{
-        width: 70%;
-    }
-    .messageBox{
-        width: 100%;
-        margin-left: 0vw;
-        height: 70vh;
-    }
-}
-  ::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 20px;
     display: none;
   }
@@ -187,3 +21,284 @@
   ::-webkit-scrollbar-thumb:hover {
     background: rgb(187, 187, 187); 
   }
+
+
+.inputbutton{
+    border: none;
+    width: auto;
+    margin: 3px;
+    color: #d6d8da;
+    background: none;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-decoration: none;
+    border-radius: 30px;
+}
+.inputbutton:hover{
+    border-radius: 20px;
+    background-color: #232b2f;
+}
+.inputbutton:active{
+    box-shadow:	0px 0px 5px #75838a ;
+}
+.input{
+    border: none;
+    border-bottom: 1px solid rgb(167, 165, 165);
+    background: none;
+    outline: none;
+    flex-grow: 1;
+    min-width: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: center;
+    /* border-radius: 30px; */
+    /* box-shadow: 8px 8px 14px 0 #20282c inset, -8px -8px 12px 0 #475962 inset; */
+    padding-bottom: 0px;
+}  
+.inputbox{
+    border-radius: 40px;
+    padding: 5px;
+    color: #d6d8da;
+    background-color: #2d383e;
+    display: flex;
+    box-shadow: 1px 1px 3px 0 black;
+}
+#panelbody{
+    height: 80%;
+    overflow-y: auto; 
+    overflow-x: hidden; 
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
+}
+
+.panelheading{
+    position: relative;
+    display: flex;
+}
+
+  /* Message bubble */
+#time{
+    float: right; 
+    font-size: 14px;
+}
+.message{
+    text-align: left;
+    position: relative;
+    padding: 10px;
+    padding-bottom: 0px;
+    max-width: 80%;
+    font-size: 15px;
+    margin-right: 50px;
+    border-radius: 8px;
+    word-wrap: break-word;
+    margin-right: 5px;
+    color: #d6d8da;
+}
+
+.send{
+    background-color: #054740;
+    float: right;
+    margin-right: 20px;
+}
+.tik1:before{
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 10px solid#054740;
+    border-right: 10px solid transparent;
+    border-top: 15px solid #054740;
+    border-bottom: 12px solid transparent;
+    right: -14px;
+    top: 0px;
+}
+.tik2:before{
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border-left: 10px solid transparent;
+    border-right: 10px solid #222e35;
+    border-top: 15px solid #222e35;
+    border-bottom: 12px solid transparent;
+    left: -14px;
+    top: 0px;
+}
+
+.received{
+    margin-left: 20px;
+    background-color: #222e35;
+    float: left;
+}
+
+.panelstyling{
+    padding: 2%;
+    width: 100%;
+    display: flex;
+    height: 93.2vh;
+}
+
+.add{
+    position: relative;
+    width: 20%;
+    margin: 2%;
+    margin-right: 1%;
+}
+.left{
+    display: block;
+}
+.chatbob{
+    width: 53%;
+    margin: 2%;
+    margin-right: 1%;
+}
+.inputboxContainer{
+    width: 50%;
+}
+@media( max-width: 750px) {
+    /* panels */
+    #panelbody{
+        height: 80%;
+        margin-bottom: 10%;
+    }
+    .panelstyling{
+        padding: 0px;
+        display: block;
+        width: 100%;
+        height: 100vh;
+    }
+    .right{
+        display: none;
+    }
+    .chatbob{
+        width: auto;
+        margin: 0px;
+        display: block;
+        height: 67vh;
+    }
+    .panelheading-status{
+        font-size: 13px;
+    }   
+    /* Adds */
+    .add{
+        width: 100%;
+        height: 10%;
+        margin: 0px;
+    }
+
+    /* Message */
+    .message{
+        font-size: 14px;
+    }
+    .tik1:before{
+        border-left: 10px solid#054740;
+        border-right: 6px solid transparent;
+        border-top: 11px solid #054740;
+        border-bottom: 8px solid transparent;
+        right: -8px;
+        top: 0px;
+    }
+    .tik2:before{
+        border-left: 6px solid transparent;
+        border-right: 10px solid #222e35;
+        border-top: 11px solid #222e35;
+        border-bottom: 8px solid transparent;
+        left: -8px;
+        top: 0px;
+    }
+    #time{
+        font-size: 10px;
+    }
+
+    .inputboxContainer{
+        width: 100%; 
+    }
+    .inputsend{
+        width: 100%;
+    }
+    .inputbutton{
+        width: 10%;
+        font-size: 13px;
+    }
+    .input{
+        font-size: 13px;
+        width: 70%;
+    }
+    .messageBox{
+        width: 100%;
+        margin-left: 0vw;
+        height: 70vh;
+    }
+}
+  
+@media (max-height:600px) and (max-width:750px){
+    .left{
+        display: none;
+    }
+    .right{
+        display: none;
+    }
+}
+
+
+  /* 3-dot popup */
+.dot-container{
+    position: absolute;
+    right: 0px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+  .dot{
+    width: 6px;
+    height: 6px;
+    margin: 3px;
+    border-radius: 3px;
+    background-color: aliceblue;
+}
+.dot-container:hover > .dot{
+    background-color: rgb(165, 165, 165);
+}
+.dot-menu{
+    position: absolute;
+    top:30px;
+    right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 3px;
+    visibility: hidden;
+    z-index: 999;
+    background-color: #2a2f33;
+    box-shadow: 2px 2px 2px #000000;
+}
+.dot-menu-option{
+    display: block;
+    padding: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    min-width: 50px;
+    text-align: left;
+    color: #d4d5d7;
+    cursor: pointer;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.dot-menu-option:hover{
+    background-color: #1e2225;
+
+}
+@media (max-width:750px){
+    .dot{
+        width: 4px;
+        height: 4px;
+    }
+    .dot-menu-option{
+        display: block;
+        min-width: 50px;
+        text-align: left;
+        color: #d4d5d7;
+        cursor: pointer;
+        font-size: 12px;
+    }
+}
