--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -34,7 +34,10 @@
             {% include 'dashboard/chat.html' %}
             <!-- <footer class="text-center" style="color: rgb(149, 149, 149);position: sticky;bottom: 10px;" >Enjoy chatting</footer> -->
         </div>
+        <modal2btn :title="yesNoModal.title" @proceed-action="yesNoModal.show = false; handle2buttonPopup();" v-if="yesNoModal.show" @close-action="yesNoModal.show = false; reset2btnModal();" >
+        </modal2btn>
     </div>
+    {% include 'modals/modal.html' %}
 </body>
 {% include 'base/js.html' %}
 </html>
