--- a/templates/dashboard/chat.html
+++ b/templates/dashboard/chat.html
@@ -4,30 +4,58 @@
                 <div class="add left"></div>
                 
                 <div class="chatbob">
-                    <div class="panelheading text-center">
-                        <div style="color: white; height: 5%; font-size: 12px;">
-                            <%status%>
-                        </div>
+                    <div class="panelheading text-center" style="color: white;">
+                            <div class="panelheading-status" style="flex-grow: 1;"><%status%></div>
+                            <div class="dot-container" @click="showDotMenu">
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                            </div>
+                            <div class="dot-menu">
+                                <div class="dot-menu-option" @click="confirmReport"> Report stranger as bot </div>
+                            </div>
                     </div>
                     <div id="panelbody">
                         <div v-for="(message, index) in chat_messages" @load="scrollToBottom">
                                 <div style="margin-top: 5px; overflow:auto; height: auto; min-height: 20px;">
                                     <div>
                                         <div v-if="message.from == 'self'">
-                                            <div class="message send">
-                                                <%message.message%>
-                                                <br>
-                                                <div id="time">
-                                                    <sup>&nbsp;&nbsp;&nbsp;<%(new Date).getHours()%>:<% (new Date).getMinutes() %></sup>
+                                            <div v-if="index>0 && chat_messages[index-1].from == message.from">
+                                                <div class="message send">
+                                                    <%message.message%>
+                                                    <br>
+                                                    <div id="time">
+                                                        <sup>&nbsp;&nbsp;&nbsp;<%(new Date).getHours()%>:<% (new Date).getMinutes() %></sup>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div v-else>
+                                                <div class="message send tik1">
+                                                    <%message.message%>
+                                                    <br>
+                                                    <div id="time">
+                                                        <sup>&nbsp;&nbsp;&nbsp;<%(new Date).getHours()%>:<% (new Date).getMinutes() %></sup>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                         <div v-else>
-                                            <div class="message received">
-                                                <%message.message%>
-                                                <br>
-                                                <div id="time">
-                                                    <sup>&nbsp;&nbsp;&nbsp;<%(new Date).getHours()%>:<% (new Date).getMinutes() %></sup>
+                                            <div v-if="index>0 && chat_messages[index-1].from == message.from">
+                                                <div class="message received">
+                                                    <%message.message%>
+                                                    <br>
+                                                    <div id="time">
+                                                        <sup>&nbsp;&nbsp;&nbsp;<%(new Date).getHours()%>:<% (new Date).getMinutes() %></sup>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div v-else>
+                                                <div class="message received tik2">
+                                                    <%message.message%>
+                                                    <br>
+                                                    <div id="time">
+                                                        <sup>&nbsp;&nbsp;&nbsp;<%(new Date).getHours()%>:<% (new Date).getMinutes() %></sup>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -45,7 +73,7 @@
                             <div class="inputbutton" title="ESC" @click="changeUserStatus">
                                 <% new_user %>
                             </div>
-                            <input class="input" autofocus type="text" name="" :disabled="partner? false : true" id="msgbox" v-model="message">
+                            <input class="input" autofocus type="text" name="" :disabled="partner? false : true" id="msgbox" v-model="message" placeholder="Type Here">
                             <div class="inputbutton" style="display: flex;" :disabled="partner? false : true" @click="sendmsg"><span class="glyphicon glyphicon-send"></span></div>
                         </div>
                         
