--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,6 +1,8 @@
 <div class="topnav" id="myTopnav">
-    <div class="logo">TTS LOGO
+    <div class="logo">TTS
       <img src="" alt="" srcset="">
     </div>
     <p class="button">Online: <% onLine %></p>
-  </div>
+    <div class="translate-nav-wrapper"><div id="google_translate_element"></div></div>
+</div>
+ 
