--- a/static/css/modal/yesNoModal.css
+++ b/static/css/modal/yesNoModal.css
@@ -1,12 +1,18 @@
+:root{
+    --text-color: #fff;
+    --popup-background: #2a2f33;
+    --desktop-font-size: 20px;
+}
 .modal-container-outside{
     position: absolute;
     top: 0px;
     left: 0px;
     width:100%;
     z-index: 99;
-    color: rgb(255, 255, 255);
+    color: var(--text-color);
     height: 100%;
-    /* background-color: #acacac1f; */
+    backdrop-filter: blur(5px);
+    transition: 2s ease-in-out;
 }
 .modal-container-inner{
     position: absolute;
@@ -22,7 +28,7 @@
     border-radius: 2px;
     display: block;
     box-shadow: 10px 10px 30px black;
-    background-color: #2a2f33;
+    background-color: var(--popup-background);
 }
 .modal-buttons{
     margin-top: 20px;
@@ -30,30 +36,36 @@
 .model-title{
         padding-left: 10px;
         padding-right: 10px;
-        font-size: 20px;
-    }
+        font-size: var(--desktop-font-size);
+}
 .modal-button{
     display: inline-block;
-    /* height: 30px; */
-    /* width: 60px; */
+    height: 30px;
+    width: 20%;
+    min-width: 40px;
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
     padding: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    /* vertical-align: middle; */
-    line-height: 2em;
     border-radius: 2px;
     cursor: pointer;
-    background-color: #32393f;
-    box-shadow: 0px 0px 5px 0 black;
+    line-height: 1.5em;
+    background-color: var(--popup-background);
+    box-shadow: 3px 3px 12px 0 #171a1dbe, -3px -3px 12px 0 #434a50be;
+}
+.noselect{
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 .modal-button:hover{
-    box-shadow: 0px 0px 10px 0 black;
+    box-shadow: 3px 3px 5px 0 #171a1dbe, -3px -3px 5px 0 #434a509b;
 }
 .modal-button:active{
-    background-color: #2a2f33;
+    box-shadow: 3px 3px 12px 0 #171a1dbe inset, -3px -3px 12px 0 #434a50be inset;
 }
 @media (max-width: 750px){
     .model-title,.modal-button{
