--- a/templates/base/js.html
+++ b/templates/base/js.html
@@ -1,6 +1,9 @@
 <script src="static/js/imports/Vue.js"></script>
 <!-- <script src="static/js/imports/bigInt.js"></script> -->
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+<!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 <script src="static/js/imports/socket.io.js"></script>
 <script src="static/js/base.js"></script>
 <script src="static/js/modals.js"></script>
-<script src="static/js/script.js"></script>
+<script src="static/js/script.js?v=0.5"></script>
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"></script>
