removed database dependency

--- a/templates/base/js.html
+++ b/templates/base/js.html
@@ -2,8 +2,8 @@
 <!-- <script src="static/js/imports/bigInt.js"></script> -->
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 <!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
-<script src="static/js/imports/socket.io.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js" integrity="sha512-zoJXRvW2gC8Z0Xo3lBbao5+AS3g6YWr5ztKqaicua11xHo+AvE1b0lT9ODgrHTmNUxeCw0Ry4BGRYZfXu70weg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="static/js/base.js"></script>
 <script src="static/js/modals.js"></script>
-<script src="static/js/script.js?v=0.5"></script>
+<script src="static/js/script.js?v=0.6"></script>
 <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"></script>
