--- a/templates/base/js.html
+++ b/templates/base/js.html
@@ -7,3 +7,4 @@
 <script src="static/js/modals.js"></script>
 <script src="static/js/script.js?v=0.6"></script>
 <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"></script>
+<script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
