--- a/templates/dashboard/chat.html
+++ b/templates/dashboard/chat.html
@@ -6,7 +6,7 @@
         <div class="chatbob">
             <div class="panelheading text-center" style="color: white;">
                     <div class="panelheading-status notranslate" style="flex-grow: 1;"><%status%></div>
-                    <div>
+                    <!-- <div>
                         <div class="dot-container" @click="showDotMenu">
                             <div class="dot"></div>
                             <div class="dot"></div>
@@ -15,7 +15,7 @@
                         <div class="dot-menu">
                             <div class="dot-menu-option" @click="confirmReport"> Report stranger as bot </div>
                         </div>
-                    </div>
+                    </div> -->
             </div>
             
             <div id="panelbody">
